@@ -20,6 +20,7 @@ Revision history for Perl module Math::Prime::Util::GMP
     - moebius handles negative inputs
 
     - Rewrite mpf_log internal function.  Use Newton/Halley insteaf of AGM.
+      Among other things, this speeds up floating point zeta by about 4x.
 
 
 0.48 2017-10-05
